--- a/di/index.html
+++ b/di/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>Desert Idaho</title>
     <link rel="stylesheet" href="assets/css/foundation.css">
   </head>
 <body>
@@ -13,7 +13,8 @@
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
         <div class="large-12 cell">
-          <h1>Welcome to Foundation</h1>
+          <h1>Desert Idaho</h1>
+          <p>Poems Inspired by Nature and Philosophy</p>
         </div>
       </div>
 
